--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
 body {
+  font-family: 'Open Sans', sans-serif;
+}
 
+@media (max-width: 750px) {
+  body {
+    text-align: center;
+  }
+}
+
+h1, h2 {
+  font-weight: bold;
 }
 
 p {
@@ -7,7 +17,12 @@ p {
 }
 
 a {
+  color: #F76E11;
   text-decoration: none;
+}
+
+a:hover {
+  color: #FFBC80;
 }
 
 .container-fluid {
@@ -28,7 +43,9 @@ a {
   font-size: 6rem;
   text-align: center;
   width: 100px;
+  margin-bottom: 10px;
 }
+
 
 /* Navbar */
 .navbar {
@@ -36,7 +53,14 @@ a {
 }
 
 .navbar-brand {
+  color: #FC4F4F;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 3rem;
+  font-weight: bold;
+}
+
+.navbar-brand:hover {
+  color: #FC4F4F;
 }
 
 .navbar-menu {
@@ -45,19 +69,30 @@ a {
 }
 
 .nav-link {
-  color: #999;
+  color: #FFBC80;
   display: inline-block;
   margin: 10px;
 }
 
 /* About */
 .portrait-img {
+  width: 80%;
   border-radius: 50%;
 }
 
 .about-text {
-  width: 75%;
+  /* width: 75%; */
   line-height: 2rem;
+}
+
+.btn {
+  margin: 15% 0 20%;
+  width: 200px;
+}
+
+.btn:hover {
+  border-color: #FFBC80;
+  background-color: #FFBC80;
 }
 
 /* Features */
@@ -68,12 +103,24 @@ a {
 
 .features-item {
   margin: 5% auto;
-  width: 60%;
+  width: 70%;
+}
+
+@media (max-width: 750px) {
+  .features-item {
+    margin: 15% auto;
+    width: 100%;
+  }
+}
+
+@media (min-width: 750px) and (max-width:1350px) {
+  .features-item {
+    width: 90%;
+  }
 }
 
 .features-text {
   line-height: 1.5rem;
-  /* width: 50%; */
 }
 
 /* Pricing */
